# resmon-widget

./: .gitignore  CMakeLists.txt  debug.sh  gdbconfig.txt  run.sh
include/: calculations.h  draw.h  hardwareinfo.h  workers.h
src/: calculations.cpp  draw.cpp  hardwareinfo.cpp  icon.rs  main.cpp  workers.cpp
